--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="container">
-            <h1>Who is your favorite My Little Pony ?</h1>
+            <h1>Jouer au quinté c'est mieux</h1>
             <ul class="ponys">
                 <li>
                     <figure>
