Ajout Pimkie Pie dans la liste

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
                         <figcaption>Pinkie Pie</figcaption>
                     </figure>
                 </li>
+                <li>
+                    <figure>
+                        <img src="https://images.app.goo.gl/fqmK6F5C46kCJmX57">
+                        <figcaption>Pimkie Pie</figcaption>
+                    </figure>
+                </li>
             </ul>
             <div class="clearfix"></div>
         </div>
