--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="https://images.app.goo.gl/fqmK6F5C46kCJmX57">
+                        <img src="img/bojack-horseman.png">
                         <figcaption>Pimkie Pie</figcaption>
                     </figure>
                 </li>
