Fluttershy to Niannian

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li>
                     <figure>
                         <img src="img/fluttershy.png">
-                        <figcaption>Fluttershy</figcaption>
+                        <figcaption>Niannian</figcaption>
                     </figure>
                 </li>
                 <li>
