--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="img/fluttershy.png">
+                        <img src="img/bojack-horseman.png">
                         <figcaption>Niannian</figcaption>
                     </figure>
                 </li>
                 <li>
                     <figure>
                         <img src="img/pinkiepie.png">
-                        <figcaption>Pinkie Pie</figcaption>
+                        <figcaption>Alexandra Arnold</figcaption>
                     </figure>
                 </li>
                 <li>
