ajout de 27 a PinkiePie

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li>
                     <figure>
                         <img src="img/pinkiepie.png">
-                        <figcaption>Pinkie Pie</figcaption>
+                        <figcaption>Pinkie Pie 27</figcaption>
                     </figure>
                 </li>
                 <li>
