AA to Alexandra

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li>
                     <figure>
                         <img src="img/pinkiepie.png">
-                        <figcaption>Alexandra Arnold</figcaption>
+                        <figcaption>Alexandra </figcaption>
                     </figure>
                 </li>
                 <li>
